--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -1,18 +1,21 @@
-name : react-app
+# This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
+# For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
+
+name: Node.js Package
+
 on:
   push:
     branches: [master]
+
 jobs:
-  runs-on: ubuntu-latest 
-  strategy: 
-    matrix: 
-      node-version: [14.x , 16.x , 18.x]
-  steps:
-    - uses: actions/checkout@v3
-    - name: use nodejs ${{matrix.node-version}}
-      uses: actions/setup-node@v3
-      with: 
-        node-version: ${{matrix.node-version}}
-        cache: npm 
-    - run: npm install 
-     
+  nodejob:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: npm i
+      - run: npm test
+
+
